@@ -132,6 +132,9 @@ sub is_valid {
     # quickly check length
     return $cache->{$number}->{is_valid} = 0 if(length($cleaned_number) < 7 || length($cleaned_number) > 10);
 
+    # 04 is invalid, only 05[56] are valid
+    return $cache->{$number}->{is_valid} = 0 if($cleaned_number =~ /^(4|5[01234789])/);
+
     # slightly more rigourous length check for some unallocated geographic numbers
     # 07, 02x and 011x are always ten digits
     return $cache->{$number}->{is_valid} = 0 if($cleaned_number =~ /^([27]|11)/ && length($cleaned_number) != 10);
