@@ -162,6 +162,12 @@ is_deeply(
 $number = Number::Phone->new('+445602041914');
 ok($number->is_ipphone(), "VoIP correctly identified");
 
+$number = Number::Phone->new('+444000000000');
+is($number, undef, "Invalid +44 4 number identified");
+
+$number = Number::Phone->new('+445025259012');
+is($number, undef, "Invalid +44 5 number identified");
+
 $number = Number::Phone->new('+443031231234');
 skip_if_mocked("libphonenumber doesn't do operators", 1, sub {
   ok($number->operator() eq 'BT', "03 numbers have right operator");
