@@ -1,9 +1,13 @@
 XXXX-XX-XX      XXXXXX  Windows doesn't properly support fork() so skip the tests for it;
+                        Correctly identify UK 04 and 05[01234789] number as invalid,
+                          instead of valid but unallocated (fix arising from
+                          https://github.com/DrHyde/perl-modules-Number-Phone/issues/98);
+                        Minor documentation clarification re constructor;
                         Use data from a tagged release of libphonenumber instead of whatever
                           is in master, so builds are more reproducible;
                         Expose that tag in libphonenumber_tag method;
                         Expose OFCOM, CNAC, NPA and localcallingguide.com data update
-                          date/time in N::P::{UK,NANP::CA,NANP::US,NANP}->data_source
+                          date/time in N::P::{UK,NANP::CA,NANP::US,NANP}->data_source;
                         Data updates
 
 2020-09-04      3.6006  Data updates
